@@ -9,10 +9,14 @@ v0.9 [2016-]
             - added "sb:StatusText()" on "freshstuff.dat" file validation return
             - fixed issue on "check_new_rule_entrys()" while 1st startup failed
             - added status text on rulename has changed to display if new name is unique or not
+            - reload listview on tab 4 on changed event of textctrl_rulename,
+            - reload listview on tab 4 on clicked event of checkbox_activate
+            - reload listview on tab 4 + 5 on selected event of choicectrl_category
         - tab 4:
             - replaced rules_listbox elements with rules_listview
             - added check to enable/disable delete + clone button on rules_listview selection event + "unprotect_hub_values()"
             - added status text on rulename has changed to display if new name is unique or not
+            - added column "active" and "category" to rules listview
         - tab 5:
             - replaced categories_listbox elements with categories_listview
             - added column to show how many times the category name exists on the rules table
@@ -59,6 +63,10 @@ v0.9 [2016-]
             - replaced "set_logfilesize()" to heavy reduce calling "wx.wxFileSize()" method
             - replaced "protect_hub_values()" parameter list by short version and using notebook page ":Enable()"
             - replaced "unprotect_hub_values()" parameter list by short version and using notebook page ":Disable()"
+            - removed param id on "table.hasKey()"
+            - fixed check if only two params are provided on "table.hasKey()" 
+            - added check if "need_save.rules" is true when "dialog_show" is false on "validate.rules()"
+            - changed multi calls on "validate.*()" to a single call for "validate.rules()" and fetch all return values
             - changed maybe some more tiny things :)
 
     - update: "cfg/cfg.lua"  / by jrock
